--- a/index.css
+++ b/index.css
@@ -8,6 +8,21 @@ footer{
   -moz-background-size: cover;   
   -o-background-size: cover;
 }
-body > div.full.height > div.following.bar.light > div > div > div > div > a:nth-child(4){
+body > div.full.height > div.following.bar.light > div > div > div > div > a:nth-child(4),body > div.full.height > div.user.signin > div > div > form > h3{
   display: none
+}
+.ui.message{
+  margin: 0;
+  background: #fff;
+  box-shadow: none
+}
+.ui.negative.message,.ui.negative.message{
+  background-color: #fff;
+  box-shadow: none
+}
+.ui.attached.segment{
+  border:none
+}
+.ui.segment{
+  border:none
 }
